Fix spacing for switch getting cut off for translated strings

--- a/less/forms.less
+++ b/less/forms.less
@@ -99,7 +99,7 @@
       }
 
       .braveryPanelHeaderRight {
-        margin-left: 130px;
+        margin-left: auto;
       }
     }
 
